--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -42,3 +42,13 @@ a{
   text-decoration:none;
   color:#333;
 }
+
+#nprogress {
+  .bar {
+    background: #7367F0 !important; //自定义颜色
+  }
+
+  .spinner-icon {
+    border-color: #7367F0 transparent transparent #7367F0;
+  }
+}
