--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -52,3 +52,7 @@ a{
     border-color: #7367F0 transparent transparent #7367F0;
   }
 }
+
+.el-menu-item.is-active{
+  background-color: #f1f0fe;
+}
