--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -56,3 +56,10 @@ a{
 .el-menu-item.is-active{
   background-color: #f1f0fe;
 }
+
+.icon {
+  width: 1em; height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
